Edited wiki page through web user interface.

--- a/wiki/DocumentationStart.wiki
+++ b/wiki/DocumentationStart.wiki
@@ -13,6 +13,7 @@ Using the FlagRushTutorial as an entry point into the inner workings of JGN prov
  * EncryptionExample
  * CheatHandlingCode
  * RunningExamples
+ * BasicClientServer
 
 == Misc ==
 
