--- a/wiki/DocumentationStart.wiki
+++ b/wiki/DocumentationStart.wiki
@@ -14,6 +14,7 @@ Using the FlagRushTutorial as an entry point into the inner workings of JGN prov
  * CheatHandlingCode
  * RunningExamples
  * BasicClientServer
+ * SimpleSynchronization
 
 == Misc ==
 
